# bazel-container

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  bazel.bzl  chisel.bzl  deb_packages.bzl  deb_packages.yaml  go.mod  go.sum  trixie.lock.json  trixie.yaml  versions.bzl
chisel-release/: BUILD.bazel  chisel.yaml
chisel-release/slices/: BUILD.bazel  autoconf.yaml  automake.yaml  autotools-dev.yaml  base-files.yaml  bash.yaml  binutils.yaml  coreutils.yaml  cpp-13-x86-64-linux-gnu.yaml  cpp-13.yaml  cpp.yaml  curl.yaml  dpkg.yaml  findutils.yaml  g++-13-x86-64-linux-gnu.yaml  g++-13.yaml  g++.yaml  gcc-13-x86-64-linux-gnu.yaml  gcc-13.yaml  gcc.yaml  git.yaml  grep.yaml  gzip.yaml  libbinutils.yaml  libc6-dev.yaml  libc6.yaml  libcrypt1.yaml  libcurl3t64-gnutls.yaml  libcurl4t64.yaml  libdpkg-perl.yaml  libgcc-11-dev.yaml  libgcc-13-dev.yaml  libgdbm-compat4t64.yaml  libgdbm6t64.yaml  libglib2.0-0.yaml  libglib2.0-0t64.yaml  libgnutls30t64.yaml  libhogweed6t64.yaml  libkrb5-3.yaml  libldap2.yaml  (+30 more)
deb-manager/: BUILD.bazel  deb.go  main.go
language/: BUILD.bazel  chisel.go
private/chisel/: BUILD.bazel  build.py  defs.bzl
private/deb/: cacerts.bzl  deb_pkg.bzl
toolchain_container/: toolchain_container.bzl
