load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_load")
load("@rules_distroless//distroless:defs.bzl", "cacerts", "passwd")

pkg_tar(
    name = "bazelisk_bin",
    files = {
        "@bazelisk//file": "/usr/local/bin/bazel",
    },
    mode = "0755",
)

cacerts(
    name = "cacerts",
    package = "@trixie//ca-certificates/amd64:data",
)

passwd(
    name = "passwd",
    entries = [
        {
            "gecos": ["root"],
            "gid": 0,
            "shell": "/sbin/nologin",
            "home": "/root",
            "uid": 0,
            "password": "x",
            "username": "root",
        },
    ],
)

# Layer compaction
pkg_tar(
    name = "base-debian",
    mode = "0755",
    deps = [
        ":cacerts",
        ":passwd",
        # Dep packages
        "@trixie//base-files/amd64",
        "@trixie//base-passwd/amd64",
        "@trixie//tzdata/amd64",
        "@trixie//netbase/amd64",
        "@trixie//libc6/amd64",
        "@trixie//libssl3t64/amd64",
        "@trixie//coreutils/amd64",
        "@trixie//debianutils/amd64",
        "@trixie//grep/amd64",
        "@trixie//sed/amd64",
        "@trixie//findutils/amd64",
        "@trixie//mawk/amd64",
        "@trixie//g++/amd64",
        "@trixie//zip/amd64",
        "@trixie//unzip/amd64",
        "@trixie//tar/amd64",
        "@trixie//gzip/amd64",
        "@trixie//patch/amd64",
        "@trixie//linux-libc-dev/amd64",
        "@trixie//curl/amd64",
        "@trixie//git/amd64",
        "@trixie//python3-minimal/amd64",
        "@trixie//python3-distlib/amd64",
        "@trixie//libpython3.13-stdlib/amd64",
        "@trixie//bash/amd64",
        "@trixie//dash/amd64",
        "@trixie//automake/amd64",
        "@trixie//pkgconf/amd64",
        "@trixie//diffutils/amd64",
    ]
)

oci_image(
    name = "bazelisk",
    os = "linux",
    architecture = "amd64",
    tars = [
        ":base-debian",
        ":bazelisk_bin",
    ]
)

oci_load(
    name = "bazelisk.tar",
    image = ":bazelisk",
    repo_tags = ["bazel-container:debian13"]
)

oci_push(
    name = "push",
    image = ":bazelisk",
    remote_tags = [
        "bazelisk",
        "bazelisk-debian13",
        "bazelisk-v1.27.0-debian13",
    ],
    repository = "ghcr.io/f110/bazel-container",
)
