load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "deb-manager_lib",
    srcs = [
        "deb.go",
        "main.go",
    ],
    importpath = "go.f110.dev/bazel-container/deb-manager",
    visibility = ["//visibility:private"],
    deps = [
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_binary(
    name = "deb-manager",
    embed = [":deb-manager_lib"],
    visibility = ["//visibility:public"],
)
