load("//private/chisel:defs.bzl", "chisel_slice")

chisel_slice(
    name = "base-files",
    src = "base-files.yaml",
    slice = "base",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "base-passwd",
    src = "base-passwd.yaml",
    slice = "data",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "ca-certificates",
    src = "ca-certificates.yaml",
    slice = "data",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "tzdata",
    src = "tzdata.yaml",
    slice = "zoneinfo",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "netbase",
    src = "netbase.yaml",
    slice = "etc",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "libssl3",
    src = "libssl3.yaml",
    slice = "libs",
    visibility = ["//visibility:public"],
    deps = [":libc6"],
)

chisel_slice(
    name = "debianutils",
    src = "debianutils.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [":libc6"],
)

chisel_slice(
    name = "grep",
    src = "grep.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":libc6",
        ":libpcre3",
    ],
)

chisel_slice(
    name = "sed",
    src = "sed.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":libacl1",
        ":libc6",
        ":libselinux1",
    ],
)

chisel_slice(
    name = "g++",
    src = "g++.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":cpp",
        ":g++-11",
        ":gcc",
        ":gcc-11",
    ],
)

chisel_slice(
    name = "zip",
    src = "zip.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "unzip",
    src = "unzip.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "tar",
    src = "tar.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        "libselinux1",
        ":libacl1",
        ":libc6",
    ],
)

chisel_slice(
    name = "gzip",
    src = "gzip.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [":libc6"],
)

chisel_slice(
    name = "patch",
    src = "patch.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [":libc6"],
)

chisel_slice(
    name = "linux-libc-dev",
    src = "linux-libc-dev.yaml",
    slice = "devel",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "curl",
    src = "curl.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":libc6",
        ":libcurl4",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "git",
    src = "git.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":libc6",
        ":libcurl3-gnutls",
        ":liberror-perl",
        ":libexpat1",
        ":libpcre2-8-0",
        ":perl",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "python3.10-minimal",
    src = "python3.10-minimal.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":libc6",
        ":libexpat1",
        ":libpython3.10-minimal",
        ":libpython3.10-stdlib",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "python3-distutils",
    src = "python3-distutils.yaml",
    slice = "libs",
    visibility = ["//visibility:public"],
    deps = [
        ":python3.10-minimal",
        ":python3-lib2to3",
    ],
)

chisel_slice(
    name = "bash",
    src = "bash.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":libc6",
        ":libtinfo6",
    ],
)

chisel_slice(
    name = "bash-posix",
    package_name = "bash",
    src = "bash.yaml",
    slice = "posix",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "findutils",
    src = "findutils.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":libc6",
        ":libselinux1",
    ],
)

chisel_slice(
    name = "coreutils",
    src = "coreutils.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":libacl1",
        ":libattr1",
        ":libc6",
        ":libgmp10",
        ":libselinux1",
    ],
)

chisel_slice(
    name = "mawk",
    src = "mawk.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":libc6",
    ],
)

chisel_slice(
    name = "strace",
    src = "strace.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":libc6",
        ":libunwind8",
    ],
)

chisel_slice(
    name = "libc6",
    src = "libc6.yaml",
    slice = "data",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "automake",
    src = "automake.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":autoconf",
        ":autotools-dev",
    ],
)

chisel_slice(
    name = "pkg-config",
    src = "pkg-config.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        ":libc6",
        ":libdpkg-perl",
        ":libglib2.0-0",
    ],
)

# Deps

chisel_slice(
    name = "libpcre3",
    src = "libpcre3.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libacl1",
    src = "libacl1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libselinux1",
    src = "libselinux1.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libpcre2-8-0",
    ],
)

chisel_slice(
    name = "libpcre2-8-0",
    src = "libpcre2-8-0.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "cpp",
    src = "cpp.yaml",
    slice = "bin",
    deps = [":cpp-11"],
)

chisel_slice(
    name = "gcc",
    src = "gcc.yaml",
    slice = "bin",
    deps = [
        ":cpp",
        ":gcc-11",
    ],
)

chisel_slice(
    name = "g++-11",
    src = "g++-11.yaml",
    slice = "bin",
    deps = [
        ":gcc-11",
        ":libc6",
        ":libgmp10",
        ":libisl23",
        ":libmpc3",
        ":libmpfr6",
        ":libstdc++-11-dev",
        ":libzstd1",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "gcc-11",
    src = "gcc-11.yaml",
    slice = "bin",
    deps = [
        ":binutils-x86-64-linux-gnu",
        ":cpp-11",
        ":libc6",
        ":libcc1-0",
        ":libgcc-11-dev",
        ":libgcc-s1",
        ":libgmp10",
        ":libisl23",
        ":libmpc3",
        ":libmpfr6",
        ":libstdc++6",
        ":libzstd1",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "libcurl4",
    src = "libcurl4.yaml",
    slice = "libs",
    deps = [
        ":libbrotli1",
        ":libc6",
        ":libgssapi-krb5-2",
        ":libidn2-0",
        ":libldap-2.5-0",
        ":libnghttp2-14",
        ":libpsl5",
        ":librtmp1",
        ":libssh-4",
        ":libssl3",
        ":libzstd1",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "zlib1g",
    src = "zlib1g.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libcurl3-gnutls",
    src = "libcurl3-gnutls.yaml",
    slice = "libs",
    deps = [
        ":libbrotli1",
        ":libc6",
        ":libgnutls30",
        ":libgssapi-krb5-2",
        ":libidn2-0",
        ":libldap-2.5-0",
        ":libnettle8",
        ":libnghttp2-14",
        ":libpsl5",
        ":librtmp1",
        ":libssh-4",
        ":libzstd1",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "libexpat1",
    src = "libexpat1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "perl",
    src = "perl.yaml",
    slice = "bin",
    deps = [
        ":libperl5.34",
        ":netbase",
        ":perl-base",
        ":perl-modules-5.34",
    ],
)

chisel_slice(
    name = "liberror-perl",
    src = "liberror-perl.yaml",
    slice = "libs",
)

chisel_slice(
    name = "libpython3.10-minimal",
    src = "libpython3.10-minimal.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libssl3",
    ],
)

chisel_slice(
    name = "libpython3.10-stdlib",
    src = "libpython3.10-stdlib.yaml",
    slice = "libs",
    deps = [
        ":libbz2-1.0",
        ":libc6",
        ":libcrypt1",
        ":libdb5.3",
        ":libffi8",
        ":liblzma5",
        ":libmpdec3",
        ":libncursesw6",
        ":libnsl2",
        ":libpython3.10-minimal",
        ":libreadline8",
        ":libsqlite3-0",
        ":libtinfo6",
        ":libtirpc3",
        ":libuuid1",
    ],
)

chisel_slice(
    name = "python3-lib2to3",
    src = "python3-lib2to3.yaml",
    slice = "libs",
)

chisel_slice(
    name = "libtinfo6",
    src = "libtinfo6.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libattr1",
    src = "libattr1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libgmp10",
    src = "libgmp10.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libunwind8",
    src = "libunwind8.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":liblzma5",
    ],
)

chisel_slice(
    name = "cpp-11",
    src = "cpp-11.yaml",
    slice = "bin",
    deps = [
        ":libc6",
        ":libgmp10",
        ":libisl23",
        ":libmpc3",
        ":libmpfr6",
        ":libzstd1",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "libstdc++-11-dev",
    src = "libstdc++-11-dev.yaml",
    slice = "devel",
    deps = [
        ":libc6-dev",
        ":libgcc-11-dev",
        ":libstdc++6",
    ],
)

chisel_slice(
    name = "libisl23",
    src = "libisl23.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgmp10",
    ],
)

chisel_slice(
    name = "libmpc3",
    src = "libmpc3.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgmp10",
        ":libmpfr6",
    ],
)

chisel_slice(
    name = "libmpfr6",
    src = "libmpfr6.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgmp10",
    ],
)

chisel_slice(
    name = "libzstd1",
    src = "libzstd1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "binutils-x86-64-linux-gnu",
    src = "binutils-x86-64-linux-gnu.yaml",
    slice = "bin",
    deps = [
        "libctf-nobfd0",
        ":libbinutils",
        ":libc6",
        ":libctf0",
        ":libgcc-s1",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "libcc1-0",
    src = "libcc1-0.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgcc-s1",
        ":libstdc++6",
    ],
)

chisel_slice(
    name = "libgcc-11-dev",
    src = "libgcc-11-dev.yaml",
    slice = "devel",
    deps = [
        ":libasan6",
        ":libatomic1",
        ":libgcc-s1",
        ":libgomp1",
        ":libitm1",
        ":liblsan0",
        ":libtsan0",
        ":libubsan1",
    ],
)

chisel_slice(
    name = "libgcc-s1",
    src = "libgcc-s1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libstdc++6",
    src = "libstdc++6.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgcc-s1",
    ],
)

chisel_slice(
    name = "libbrotli1",
    src = "libbrotli1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libgssapi-krb5-2",
    src = "libgssapi-krb5-2.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libcom-err2",
        ":libk5crypto3",
        ":libkrb5-3",
        ":libkrb5support0",
    ],
)

chisel_slice(
    name = "libidn2-0",
    src = "libidn2-0.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libunistring2",
    ],
)

chisel_slice(
    name = "libldap-2.5-0",
    src = "libldap-2.5-0.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgnutls30",
        ":libsasl2-2",
    ],
)

chisel_slice(
    name = "libnghttp2-14",
    src = "libnghttp2-14.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libpsl5",
    src = "libpsl5.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libidn2-0",
        ":libunistring2",
    ],
)

chisel_slice(
    name = "librtmp1",
    src = "librtmp1.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgmp10",
        ":libgnutls30",
        ":libhogweed6",
        ":libnettle8",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "libssh-4",
    src = "libssh-4.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgssapi-krb5-2",
        ":libssl3",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "libgnutls30",
    src = "libgnutls30.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgmp10",
        ":libhogweed6",
        ":libidn2-0",
        ":libnettle8",
        ":libp11-kit0",
        ":libtasn1-6",
        ":libunistring2",
    ],
)

chisel_slice(
    name = "libnettle8",
    src = "libnettle8.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "perl-base",
    src = "perl-base.yaml",
    slice = "base",
    deps = [
        ":libc6",
        ":libcrypt1",
    ],
)

chisel_slice(
    name = "perl-modules-5.34",
    src = "perl-modules-5.34.yaml",
    slice = "modules",
    deps = [":perl-base"],
)

chisel_slice(
    name = "libperl5.34",
    src = "libperl5.34.yaml",
    slice = "libs",
    deps = [
        ":libbz2-1.0",
        ":libc6",
        ":libcrypt1",
        ":libdb5.3",
        ":libgdbm-compat4",
        ":libgdbm6",
        ":perl-modules-5.34",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "libcrypt1",
    src = "libcrypt1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libdb5.3",
    src = "libdb5.3.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libffi8",
    src = "libffi8.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libbz2-1.0",
    src = "libbz2-1.0.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "liblzma5",
    src = "liblzma5.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libmpdec3",
    src = "libmpdec3.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgcc-s1",
        ":libstdc++6",
    ],
)

chisel_slice(
    name = "libncursesw6",
    src = "libncursesw6.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libtinfo6",
    ],
)

chisel_slice(
    name = "libnsl2",
    src = "libnsl2.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libtirpc3",
    ],
)

chisel_slice(
    name = "libreadline8",
    src = "libreadline8.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libtinfo6",
    ],
)

chisel_slice(
    name = "libsqlite3-0",
    src = "libsqlite3-0.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libtirpc3",
    src = "libtirpc3.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgssapi-krb5-2",
    ],
)

chisel_slice(
    name = "libuuid1",
    src = "libuuid1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libc6-dev",
    src = "libc6-dev.yaml",
    slice = "devel",
)

chisel_slice(
    name = "libstdc++-11-dev_includes",
    src = "libstdc++-11-dev.yaml",
    slice = "includes",
)

chisel_slice(
    name = "libbinutils",
    src = "libbinutils.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "libctf-nobfd0",
    src = "libctf-nobfd0.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "libctf0",
    src = "libctf0.yaml",
    slice = "libs",
    deps = [
        ":libbinutils",
        ":libc6",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "libgomp1",
    src = "libgomp1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libitm1",
    src = "libitm1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libatomic1",
    src = "libatomic1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libasan6",
    src = "libasan6.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgcc-s1",
    ],
)

chisel_slice(
    name = "liblsan0",
    src = "liblsan0.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgcc-s1",
    ],
)

chisel_slice(
    name = "libtsan0",
    src = "libtsan0.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgcc-s1",
    ],
)

chisel_slice(
    name = "libubsan1",
    src = "libubsan1.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgcc-s1",
        ":libstdc++6",
    ],
)

chisel_slice(
    name = "libcom-err2",
    src = "libcom-err2.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libk5crypto3",
    src = "libk5crypto3.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libkrb5support0",
    ],
)

chisel_slice(
    name = "libkrb5-3",
    src = "libkrb5-3.yaml",
    slice = "libs",
    deps = [
        "libssl3",
        ":libc6",
        ":libcom-err2",
        ":libk5crypto3",
        ":libkeyutils1",
        ":libkrb5support0",
    ],
)

chisel_slice(
    name = "libkrb5support0",
    src = "libkrb5support0.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libunistring2",
    src = "libunistring2.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libsasl2-2",
    src = "libsasl2-2.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libsasl2-modules-db",
    ],
)

chisel_slice(
    name = "libhogweed6",
    src = "libhogweed6.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgmp10",
        ":libnettle8",
    ],
)

chisel_slice(
    name = "libp11-kit0",
    src = "libp11-kit0.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libffi8",
    ],
)

chisel_slice(
    name = "libtasn1-6",
    src = "libtasn1-6.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libgdbm-compat4",
    src = "libgdbm-compat4.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libgdbm6",
    ],
)

chisel_slice(
    name = "libgdbm6",
    src = "libgdbm6.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libkeyutils1",
    src = "libkeyutils1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libsasl2-modules-db",
    src = "libsasl2-modules-db.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libdb5.3",
    ],
)

chisel_slice(
    name = "autotools-dev",
    src = "autotools-dev.yaml",
    slice = "bin",
)

chisel_slice(
    name = "autoconf",
    src = "autoconf.yaml",
    slice = "bin",
    deps = [
        ":debianutils",
        ":m4",
        ":perl",
    ],
)

chisel_slice(
    name = "m4",
    src = "m4.yaml",
    slice = "bin",
    deps = [
        ":libc6",
        ":libsigsegv2",
    ],
)

chisel_slice(
    name = "libsigsegv2",
    src = "libsigsegv2.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libglib2.0-0",
    src = "libglib2.0-0.yaml",
    slice = "libs",
    deps = [
        ":libc6",
        ":libffi8",
        ":libmount1",
        ":libpcre3",
        ":libselinux1",
        ":zlib1g",
    ],
)

chisel_slice(
    name = "libmount1",
    src = "libmount1.yaml",
    slice = "libs",
    deps = [
        ":libblkid1",
        ":libc6",
        ":libselinux1",
    ],
)

chisel_slice(
    name = "libblkid1",
    src = "libblkid1.yaml",
    slice = "libs",
    deps = [":libc6"],
)

chisel_slice(
    name = "libdpkg-perl",
    src = "libdpkg-perl.yaml",
    slice = "libs",
    deps = [
        ":dpkg",
        ":perl",
    ],
)

chisel_slice(
    name = "dpkg",
    src = "dpkg.yaml",
    slice = "bin",
    deps = [
        ":libbz2-1.0",
        ":libc6",
        ":liblzma5",
        ":libselinux1",
        ":libzstd1",
        ":tar",
        ":zlib1g",
    ],
)
